--- a/Portal/war/docs/twospot.css
+++ b/Portal/war/docs/twospot.css
@@ -69,9 +69,16 @@ h4 {
 	font-size: 110%
 }
 
+#navigation {
+	width: 150px;
+	position: absolute;
+	left: 0px;
+	top: 0px;
+}
+
 #page {
 	width: 700px;
 	position: absolute;
-	left: 50px;
+	left: 150px;
 	top: 0px;
 }
