Einfachen Templating-Mechanismus ala JavaWorld (http://www.javaworld.com/jw-09-2000/jw-0915-jspweb.html). Einfaches Layout für die Dokumentation.
git-svn-id: svn://localhost/twospot_svn/trunk@665 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Portal/portal/docs/twospot.css
+++ b/Portal/portal/docs/twospot.css
@@ -70,15 +70,18 @@ h4 {
 }
 
 #navigation {
-	width: 150px;
+	width: 170px;
 	position: absolute;
-	left: 0px;
-	top: 0px;
+	left: 20px;
+	top: 50px;
+	padding-top: 10px;
+	margin-bottom: 50px;
 }
 
 #page {
 	width: 700px;
 	position: absolute;
-	left: 150px;
-	top: 0px;
+	left: 190px;
+	top: 50px;
+	padding-bottom: 150px;
 }
