--- a/Portal/portal/docs/twospot.css
+++ b/Portal/portal/docs/twospot.css
@@ -69,6 +69,14 @@ h4 {
 	font-size: 110%
 }
 
+#header {
+	width: 100%;
+	position: absolute;
+	left: 20px;
+	top: 10px;
+	padding-top: 10px;
+}
+
 #navigation {
 	width: 170px;
 	position: absolute;
