--- a/Portal/portal/docs/twospot.css
+++ b/Portal/portal/docs/twospot.css
@@ -71,10 +71,16 @@ h4 {
 
 #header {
 	width: 100%;
+	height: 50px;
 	position: absolute;
-	left: 20px;
-	top: 10px;
-	padding-top: 10px;
+	left: 0px;
+	top: 0px;
+	padding-top: 0px;
+	padding-left: 20px;
+	
+	border-bottom: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: gray;
 }
 
 #navigation {
