--- a/Portal/portal/docs/twospot.css
+++ b/Portal/portal/docs/twospot.css
@@ -50,7 +50,7 @@ body {
 }
 
 h1,h2,h3,h4 {
-	margin-bottom: 0
+	margin-bottom: 0px
 }
 
 h1 {
@@ -67,6 +67,10 @@ h3 {
 
 h4 {
 	font-size: 110%
+}
+
+center {
+	text-align: center;
 }
 
 #header {
@@ -96,5 +100,11 @@ h4 {
 	position: absolute;
 	left: 190px;
 	top: 50px;
-	padding-bottom: 150px;
+	padding-bottom: 30px;
+}
+
+#footer {
+	position: relative;
+	padding-top: 30px;
+	padding-bottom: 70px;
 }
